fixed some alignements

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@500;600;700&display=swap');
 
+#pager {
+	display:flex;
+	justify-content:center;
+	align-items:center;
+	height:100%;
+	width:100%;
+	padding:0 20px;
+	box-sizing:border-box;
+}
+
+.pageContainer {
+	height:70vh;
+	position:relative;
+}
+
 .route {
   font-family: 'Montserrat';
   font-style: normal;
@@ -29,11 +44,24 @@
   color: #000000;
 }
 
+.buttons {
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	position:absolute;
+	bottom:20px;
+}
+
 .nextBtn {
   border: 2px solid #000;
   border-radius: 100px;
   padding: 10px 40px;
-  display: inline;
+  display: inline-flex;
+  height: 50px;
+  box-sizing:border-box;
+  justify-content:center;
+  align-items:center;
 }
 
 .backBtn {
